# servebot-ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  fetch_data.py  model_config.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  setup.sh
marimo/: merge.py  predictions_analysis.py
servebot/: README.md  app.py  logging.py  main.py  metrics.py  models.py  paths.py  train.py
servebot/data/: dataset.py  embeddings.py  encodings.py  preprocess.py  scraper.py  sequences.py  utils.py
servebot/inference/: __init__.py  categories.py  predictor.py  serialize.py
servebot/model/: forget.py  index.py  servebot.py  time_encoding.py  transformer.py
servebot/ui/: __init__.py
tests/: test_predictor.py  test_utils.py
