[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "einops>=0.8.1",
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.1.6",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.47.0",
    "streamlit>=1.40.0",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "rapidfuzz>=3.14.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "ruff>=0.6.0",
    "pre-commit>=4.0.0",
    "autoflake>=2.3.0",
    "marimo>=0.15.0",
    "pytest>=8.4.1",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
